# mscProject

./: CMakeLists.txt  README.md
include/: componentMananger.cuh  componentMananger.h  fileManager.h  halfEdge - Copy.h  halfEdge.h  initialise.h  renderer.h  rxMesh.cuh  shaderManager.h  test.cuh  test.h  triangle.h
latex/: md__r_e_a_d_m_e.tex
resources/: fragment.glsl  vertex.glsl
src/: componentMananger.cpp  componentMananger.cu  fileManager.cpp  halfEdge - Copy.cpp  halfEdge.cpp  initialise.cpp  main - Copy.cpp  main.cpp  main2.cpp  renderer.cpp  rxMesh.cu  shaderManager.cpp  triangle.cpp  vector_addition.cu
